Added favicon, changed header/title, keywords

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Rotary Event Share</title>
+		<title>Rotary Blueprint</title>
 		<meta name="description" content="A collection of events for Rotary clubs" />
-		<meta name="keywords" content="grid loading, swipe, effect, slide, masonry, web design, tutorial" />
+		<meta name="keywords" content="rotary, rotary international, rotary events, event ideas" />
 		<meta name="author" content="Isaac Siegel" />
-		<link rel="shortcut icon" href="../favicon.ico">
+		<!--<link rel="shortcut icon" href="../favicon.ico">-->
+        <link rel="shortcut icon" href="img/rotary_logo.gif">
+
 
         <script src="https://cdn.firebase.com/js/client/1.1.1/firebase.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
@@ -48,7 +50,7 @@
 
             </div>
 			<header class="codrops-header">
-				<h1>Rotary Event Handbook <span>Creating a <a >bridge of ideas</a> between Rotary Clubs everywhere</span></h1>
+				<h1>Rotary Event Blueprints <span>Creating a <a >bridge of ideas</a> between Rotary Clubs everywhere</span></h1>
 
 			</header>
 			<section class="grid-wrap">
